# refract

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CURRENT_STATE.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  Dockerfile.migrations  Dockerfile.migrations.drizzle  Justfile  QUICKSTART_MIGRATIONS.md  README.md  config.env.example  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  justfile  package.json  secrets.env.example
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.sqlx/: query-7a0b19ffdf4e658cbc1098cb599e53f5b95436d74f393d92232d62c74a5a881e.json
api/: .env.example  .golangci.yml  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.redirector  Dockerfile.worker  go.mod  go.sum  sqlc.yaml
caddy/: Caddyfile
docs/: MIGRATIONS.md  backend-oidc-migration.md
frontend/: .cta.json  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  biome.json  components.json  drizzle.config.migration.ts  drizzle.config.ts  env.sh  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
frontend/public/: config.js
frontend/src/: app-env.d.ts  env.ts  providers.tsx  routeTree.gen.ts  router.tsx  styles.css
migrations/postgres/: 000001_create_users.down.sql  000004_create_timescale_hypertables.down.sql  00001_create_urls_table.sql  00002_add_domain_and_expiration_fields.sql  00003_migrate_to_snowflake_ids.sql
scripts/: build-push.sh  download-data.sh  migrate.sh  validate-schema.sh
services/analytics-processor/: .gitignore  README.md  go.mod  go.sum
services/api/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum  sqlc.yaml
services/redirector/: .gitignore  Cargo.toml  Dockerfile
services/redirector/.sqlx/: query-e24038200a15de07891510dc3e7143f36359a85a69f5c633eaa524eed5b73ae8.json
services/redirector/src/: config.rs  lib.rs  main.rs  state.rs
services/redirector/src/cache/: mod.rs
services/redirector/src/errors/: app_error.rs
services/redirector/src/events/: mod.rs  publisher.rs
services/redirector/src/geo/: lookup.rs  mod.rs
services/redirector/src/handlers/: health.rs  mod.rs  notfound.html  redirect.rs
services/redirector/src/models/: url.rs
services/redirector/src/parser/: user_agent.rs
services/redirector/src/repositories/: cache.rs  database.rs
services/redirector/src/repository/: postgres.rs
services/redirector/src/services/: url_service.rs
services/redirector/src/templates/: error_404.html  error_500.html
specs/016-authenticated-url-shortener/: data-model.md  plan.md  spec.md  (+3 more)
(+209 files in other folders)
