[package]
name = "redirector"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
config = "0.15.19"
envconfig = "0.11.1"
tokio = { version = "*", features = ["full"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls",
] }
multi-tier-cache = "0.5.6"
anyhow = "1.0.100"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
jiff = { version = "0.2.18", features = ["serde"] }
tracing = "0.1.44"
maxminddb = { version = "0.27.1", features = ["mmap"] }
ua-parser = "0.2.1"
serde_yaml = "0.9.34"
